# ClintExplorer

./: .gitexternals  .gitignore  .gitlab-ci.yml  .gitsubprojects  CMakeLists.txt  README.md
CMake/: CPackConfig.cmake
clintexplorer/: CMakeLists.txt  ClintProcess.cpp  ClintProcess.hpp  Definitions.hpp  TcpSocketAsyncServer.cpp  TcpSocketAsyncServer.hpp  main.cpp
clintexplorer/R/: CLINTv5.R  PCA_spines_GUI.R  cluster_mean_statistics_GUI.R  dbscan_GUI.R  dendrogram_color_GUI.R  filtering_by_branch_level.R  kmeans_3D_GUI.R  permute_features.R  preprocessing.R  rcliente.R  rclientfile.R  rserver.R  scale_spinematrix_columns.R  server_prueba.R  shuffle_matrix.R  spine_reprentation.R
clintexplorer/utils/: Auxiliars.hpp
